chore: update Jest configuration for TypeScript support and improve coverage collection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lint:prettier": "prettier --check .",
     "fix:prettier": "prettier --write .",
     "test": "jest",
+    "test:unit": "jest",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -76,8 +77,7 @@
     "@types/wavesurfer.js": "^5.1.0",
     "@vue/test-utils": "^1.2.2",
     "axios-mock-adapter": "^1.19.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^29",
     "core-js": "^3.15.*",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
@@ -93,17 +93,7 @@
     "raw-loader": "^4.0.2",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.3",
-    "typescript": "^4.3.5"
-  },
-  "resolutions": {
-    "node-fetch": "^2.6.7",
-    "follow-redirects": "^1.14.7",
-    "highlight.js": "^10.4.1",
-    "markdown-it": "^12.3.2",
-    "watchpack": "^1.7.5",
-    "minimist": "npm:minimist-lite@2.2.0",
-    "nuxt-i18n/@babel/traverse": "^7.23.2",
-    "@nuxtjs/eslint-config/**/@babel/traverse": "^7.23.2",
-    "@nuxtjs/eslint-config-typescript/**/@babel/traverse": "^7.23.2"
+    "typescript": "^4.3.5",
+    "vue-jest": "^3.0.7"
   }
 }
